test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/payable_attr.sw
library;

abi Abi {
    #[payable]
    fn ok_1();

    #[payable()]
    fn ok_2();

    #[payable(invalid)]
    fn not_ok_1();
}